--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9728,25 +9728,19 @@ p {
   border-color: #454545;
 }
 
-.hedd__img {
-  float: left;
-}
-
 .hedd__div {
-  margin-top: 100px;
-  float: right;
-  margin-bottom: 500px;
+  position: absolute;
+  top: 131px;
+  left: 971px;
 }
 
 .hedd__h1 {
   font-size: 70px;
-  margin-left: 1px;
-  margin-right: 1px;
-  width: 50%;
+  width: 10%;
 }
 
 .container {
-  margin-top: 520px;
+  margin-top: 55px;
   margin-left: 55px;
 }
 
@@ -9759,6 +9753,115 @@ p {
 .container__h1 {
   font-family: "PT Mono", monospace;
   font-size: 30px;
+}
+
+.box1__h4 {
+  font-size: 40px;
+  font-family: "PT Mono", monospace;
+}
+
+.box1__h2 {
+  font-size: 40px;
+  font-family: "PT Mono", monospace;
+}
+
+.box1__h3 {
+  font-size: 40px;
+  font-family: "PT Mono", monospace;
+}
+
+.box1__p1 {
+  width: 99%;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.box1__p2 {
+  width: 99%;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.box1__p3 {
+  width: 60%;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.box1__div1 {
+  float: left;
+}
+
+.box1__div2 {
+  float: left;
+}
+
+.box1__div3 {
+  float: left;
+}
+
+.box1 {
+  background-color: #fff;
+  width: 539px;
+  height: 125px;
+  padding-left: 35px;
+  padding-top: 10px;
+}
+
+.box1__div4 {
+  background-color: #3c91e6;
+  width: 539px;
+  height: 218px;
+}
+
+.sectionnn {
+  top: 400px;
+  left: 440px;
+  position: absolute;
+}
+
+.container__img {
+  height: 256px;
+  width: 377px;
+}
+
+.container__div2 {
+  position: absolute;
+  left: 72%;
+  top: 525px;
+}
+
+.container__img2 {
+  left: 820px;
+  top: 525px;
+  height: 128px;
+  position: absolute;
+  clip: rect(0px, 183px, 128px, 79px);
+}
+
+.container__img3 {
+  width: 458px;
+  position: absolute;
+  top: 555px;
+  left: 405px;
+}
+
+.container2 {
+  position: absolute;
+  width: 126px;
+  height: 126px;
+  background-color: #f1dd7b;
+  top: 399px;
+  left: 899px;
+}
+
+.container3 {
+  position: absolute;
+  width: 126px;
+  height: 126px;
+  background-color: #e87554;
+  top: 380px;
+  left: 880px;
 }
 
 /*# sourceMappingURL=style.css.map */
