--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,20 +1,11 @@
-.hedd__img{
-  float: left;
-}
 
 .hedd__div{
-  margin-top: 100px;
-  float: right;
-  margin-bottom: 500px;
+  position: absolute;
+  top: 131px;
+  left: 971px;
 }
 
 .hedd__h1{
   font-size: $xxx-large;
-  margin-left: 1px;
-  margin-right: 1px;
-    width: 50%;
-}
-
-.hedd__h2{
-
+    width: 10%;
 }
